--- a/index.html
+++ b/index.html
@@ -11,6 +11,40 @@
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-99V18TR5MM"></script>
+    <!-- sitemap -->
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Hotel",
+  "name": "Royal Inn Ambaji",
+  "image": "https://royalinnambaji.com/images/super_deluxe1.jpeg",
+  "url": "https://royalinnambaji.com",
+  "description": "A comfortable stay near Ambaji Temple.",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "DK Circle, Danta Rd, near SBI Bank, Shiv Shakti Society
+Ambaji, Gujarat 385110" ,
+    "addressLocality": "Ambaji, Gujrat",
+    "postalCode": "385110",
+    "addressCountry": "India"
+  },
+  "telephone": "+91 9537454255",
+  "priceRange": "₹1800-₹8000",
+  "hasOfferCatalog": {
+    "@type": "OfferCatalog",
+    "name": "Room Rates",
+    "itemListElement": [
+      {
+        "@type": "Offer",
+        "name": "Deluxe Room",
+        "price": "1800",
+        "priceCurrency": "INR",
+        "url": "https://royalinnambaji.com/#rooms"
+      }
+    ]
+  }
+}
+</script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
