Added stuff so that website will come on top on while doing google search

--- a/index.html
+++ b/index.html
@@ -3,33 +3,76 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Royal Inn Hotel - Luxury Accommodations</title>
+	<meta name="description" content="Royal Inn Ambaji is a 3-star hotel near Ambaji Temple offering AC rooms, private balconies, restaurant and 24/7 front desk." />
+	<meta property="og:title" content="Royal Inn Ambaji - Luxury Stay Near Ambaji Temple" />
+    <meta property="og:description" content="Enjoy 3-star accommodations with AC rooms, geyser, 24/7 service at Royal Inn Ambaji." />
+    <meta property="og:image" content="https://royalinnambaji.com/images/IMG-20250510-WA0006.jpg" />
+    <meta property="og:url" content="https://royalinnambaji.com/" />
+    <meta name="twitter:card" content="summary_large_image" />
+
+    <title>Royal Inn Ambaji - Hotel near Ambaji Temple | 3-Star Ambaji Ac commodation</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
-    </style>
+	
+	<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<link rel="shortcut icon" href="/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+<link rel="manifest" href="/site.webmanifest" />
+    
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-99V18TR5MM"></script>
     <!-- sitemap -->
-    <script type="application/ld+json">
+
+<script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Hotel",
   "name": "Royal Inn Ambaji",
-  "image": "https://royalinnambaji.com/images/super_deluxe1.jpeg",
+  "image": [
+	"https://royalinnambaji.com/images/IMG-20250510-WA0006.jpg"
+  ],
   "url": "https://royalinnambaji.com",
-  "description": "A comfortable stay near Ambaji Temple.",
+  "description": "A 3-star hotel near Ambaji Temple with comfortable accommodations, AC rooms, and 24/7 front desk service.",
   "address": {
     "@type": "PostalAddress",
-    "streetAddress": "DK Circle, Danta Rd, near SBI Bank, Shiv Shakti Society
-Ambaji, Gujarat 385110" ,
-    "addressLocality": "Ambaji, Gujrat",
+    "streetAddress": "DK Circle, Danta Road, Shiv Shakti Society",
+    "addressLocality": "Ambaji",
     "postalCode": "385110",
-    "addressCountry": "India"
+    "addressRegion": "Gujarat",
+    "addressCountry": "IN"
   },
-  "telephone": "+91 9537454255",
-  "priceRange": "₹1800-₹8000",
+  "telephone": "+91-9537454255",
+  "priceRange": "₹1700-₹7000",
+  "amenityFeature": [
+    {
+      "@type": "LocationFeatureSpecification",
+      "name": "Free Parking",
+      "value": true
+    },
+	{
+      "@type": "LocationFeatureSpecification",
+      "name": "EV Charging",
+      "value": true
+    },
+    {
+      "@type": "LocationFeatureSpecification",
+      "name": "Free WiFi",
+      "value": true
+    },
+    {
+      "@type": "LocationFeatureSpecification",
+      "name": "Restaurant",
+      "value": true
+    },
+	{
+      "@type": "LocationFeatureSpecification",
+      "name": "Banquet",
+      "value": true
+    }
+  ],
   "hasOfferCatalog": {
     "@type": "OfferCatalog",
     "name": "Room Rates",
@@ -40,11 +83,33 @@ Ambaji, Gujarat 385110" ,
         "price": "1800",
         "priceCurrency": "INR",
         "url": "https://royalinnambaji.com/#rooms"
+      },
+	  {
+        "@type": "Offer",
+        "name": "Super Deluxe Room",
+        "price": "3500",
+        "priceCurrency": "INR",
+        "url": "https://royalinnambaji.com/#rooms"
+      },
+	  {
+        "@type": "Offer",
+        "name": "Suite Room",
+        "price": "7000",
+        "priceCurrency": "INR",
+        "url": "https://royalinnambaji.com/#rooms"
+      },
+	  {
+        "@type": "Offer",
+        "name": "Family Room",
+        "price": "700",
+        "priceCurrency": "INR",
+        "url": "https://royalinnambaji.com/#rooms"
       }
     ]
   }
 }
 </script>
+
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -85,9 +150,9 @@ Ambaji, Gujarat 385110" ,
         <div class="hero-slide active" style="background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url('images/IMG-20250510-WA0015.jpg');">
             <div class="container">
                 <div class="hero-content">
-                    <h1>Experience Royal Comfort</h1>
-                    <p>Discover luxurious accommodations and world-class service at Royal Inn Hotel, where every stay is a memorable experience.</p>
-                    <a href="#rooms" class="hero-btn">Explore Rooms</a>
+                    <h1>Welcome to Royal Inn – A 3-Star Hotel Near Ambaji Temple</h1>
+                    <p>A 3-star hotel near Ambaji Temple offering clean and comfortable accommodations. Our Ambaji hotel booking system is quick and easy.</p>
+					<a href="#rooms" class="hero-btn">Explore Rooms</a>
                 </div>
             </div>
         </div>
@@ -130,6 +195,16 @@ Ambaji, Gujarat 385110" ,
                     <h1>Where Moments Become Memories</h1>
                     <p>Our elegant banquet halls, expert event planners. Capacity for 20-500 guests.</p>
                     <a href="#banquet" class="hero-btn">View Banquet</a>
+                </div>
+            </div>
+        </div>
+		<!-- Slide 6 -->
+        <div class="hero-slide active" style="background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url('images/Hotel_Whole_View.jpg');">
+            <div class="container">
+                <div class="hero-content">
+                    <h1>Welcome to Royal Inn – A 3-Star Hotel Near Ambaji Temple</h1>
+                    <p>A 3-star hotel near Ambaji Temple offering clean and comfortable accommodations. Our Ambaji hotel booking system is quick and easy.</p>
+					<a href="#rooms" class="hero-btn">Explore Rooms</a>
                 </div>
             </div>
         </div>
@@ -273,13 +348,13 @@ Ambaji, Gujarat 385110" ,
             
             <div class="restaurant-images">
                 <div class="main-image">
-                    <img src="images/restaurant1.jpg" alt="Restaurant Main" loading="lazy">
+                    <img src="images/restaurant1.jpg" alt="Restaurant Near Ambaji Temple" loading="lazy">
                 </div>
                 <div class="thumbnail-grid">
-                    <img src="images/restaurant2.jpg" alt="Restaurant Interior" loading="lazy">
-                    <img src="images/restaurant3.jpg" alt="Food Presentation" loading="lazy">
-                    <img src="images/restaurant4.jpg" alt="Wine Selection" loading="lazy">
-                    <img src="images/restaurant5.png" alt="Other Selection" loading="lazy">
+                    <img src="images/restaurant2.jpg" alt="Jain Food Near Ambaji Temple" loading="lazy">
+                    <img src="images/restaurant3.jpg" alt="Gujrati Thali Near Ambaji Temple" loading="lazy">
+                    <img src="images/restaurant4.jpg" alt="Gujrati Thali" loading="lazy">
+                    <img src="images/restaurant5.png" alt="kathyavadi Thali" loading="lazy">
                 </div>
             </div>
         </div>
@@ -318,16 +393,16 @@ Ambaji, Gujarat 385110" ,
             <div class="banquet-slider-container">
                 <div class="banquet-slider">
                     <div class="banquet-slide active">
-                        <img src="images/Banquet.png" alt="Wedding reception">
+                        <img src="images/Banquet.png" alt="Wedding hall Near Ambaji Temple">
                     </div>
                     <div class="banquet-slide">
-                        <img src="images/IMG-20250510-WA0018.jpg" alt="Corporate event">
+                        <img src="images/IMG-20250510-WA0018.jpg" alt="Banquet Near Ambaji Temple">
                     </div>
                     <div class="banquet-slide">
-                        <img src="https://images.unsplash.com/photo-1555244162-803834f70033?ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=80" alt="Banquet setup">
+                        <img src="https://images.unsplash.com/photo-1555244162-803834f70033?ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=80" alt="Banquet Hall Near Ambaji Temple">
                     </div>
                     <div class="banquet-slide">
-                        <img src="images/Banquet2.jpeg" alt="Banquet setup">
+                        <img src="images/Banquet2.jpeg" alt="Banquet Near Ambaji Temple">
                     </div>
                 </div>
                 <div class="banquet-slider-dots">
