--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:url" content="https://royalinnambaji.com/" />
     <meta name="twitter:card" content="summary_large_image" />
 
-    <title>Book Royal Inn Hotel Ambaji | 3-Star Hotel near Ambaji Temple | Best Ambaji Accommodation</title>
+    <title>Book Royal Inn Hotel Ambaji | 3-Star Hotel near Ambaji Temple | Royal Inn Hotel 𝗕𝗢𝗢𝗞 Ambaji Hotel | Best Ambaji Accommodation</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
