gst rate changed from 12.5 to 12

--- a/index.html
+++ b/index.html
@@ -349,16 +349,15 @@
                     <ul class="features-list">
                         <li><i class="fas fa-check"></i> Seasonal tasting menus</li>
                         <li><i class="fas fa-check"></i> Extensive wine cellar with 500+ selections</li>
-                        <li><i class="fas fa-check"></i> Private dining rooms available</li>
+                        <li><i class="fas fa-check"></i> Gujrati dining rooms available</li>
                         <li><i class="fas fa-check"></i> Chef's table experience</li>
-                        <li><i class="fas fa-check"></i> 24-hour in-room dining</li>
                     </ul>
                     <div class="opening-hours">
                         <h4>Opening Hours</h4>
                         <ul>
-                            <li>Breakfast: <span>8:00 AM - 9:30 AM</span></li>
-                            <li>Lunch: <span>12:00 PM - 3:00 PM</span></li>
-                            <li>Dinner: <span>6:00 PM - 11:00 PM</span></li>
+                            <li>Breakfast: <span>8:00 AM - 10:30 AM</span></li>
+                            <li>Lunch: <span>11:30 PM - 3:30 PM</span></li>
+                            <li>Dinner: <span>6:30 PM - 10:30 PM</span></li>
 
                         </ul>
                     </div>
@@ -606,14 +605,14 @@
 
                             <h3><i class="fas fa-clock"></i> Opening Hours</h3>
                             <p>Front Desk: 24/7<br>
-                                Restaurant: 7:00 AM - 11:00 PM<br>
-                                Spa: 9:00 AM - 9:00 PM</p>
+                                Restaurant: 8:00 AM - 11:00 PM<br>
+                            </p>
                         </div>
 
                         <div class="reach-us-card">
                             <h3><i class="fas fa-phone"></i> Contact Info</h3>
                             <p>Reservation: 09537454255<br>
-                                General Inquiry: 8200712745<br>
+                                General Inquiry: 09173423355<br>
                                 hotelroyalinnambaji2017@gmail.com</p>
 
                             <h3><i class="fas fa-share-alt"></i> Social Media</h3>
@@ -1221,11 +1220,11 @@
             </div>
             <div class="modal-body" style="text-align: center;">
                 <div style="font-size: 60px; color: var(--accent); margin-bottom: 20px;">
-                    <img src="images/Royal_Inn_QR.jpg" alt="Scan & Pay">
+                    <img src="images/WhatsApp Payment QR.jpg" alt="Scan & Pay">
                 </div>
                 <h4 style="margin-bottom: 15px;">Scan & Pay & Send Screenshot</h4>
                 <strong>
-                    <i class="fab fa-whatsapp fa-lg" style="color: #25D366;"></i>&nbsp;8200712745
+                    <i class="fab fa-whatsapp fa-lg" style="color: #25D366;"></i>&nbsp;9537454255
                 </strong>
 
                 <p id="paymentMessage">Scan and Pay</p>
