showing offer flags on open room modal as well

--- a/index.html
+++ b/index.html
@@ -1033,6 +1033,7 @@
                             <span class="gallery-indicator" data-index="3"></span>
                         </div>
                     </div>
+                    <div id="discountOffer"></div>
                 </div>
                 <div class="room-info">
                     <h4>Description</h4>
