--- a/admin/index.html
+++ b/admin/index.html
@@ -10,7 +10,7 @@
     <style>
         body {
             font-family: 'Poppins', sans-serif;
-            background: #0a1a2a;
+            background: #8B5A2B;
             color: #fff;
             margin: 0;
             min-height: 100vh;
