changed h1 tag for google seo indexing

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 style="background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url('images/IMG-20250510-WA0016.jpg');">
                 <div class="container">
                     <div class="hero-content">
-                        <h1>Luxury Redefined</h1>
+                        <h1>Best Hotel Near Ambaji Temple</h1>
                         <p>Indulge in our exquisite suites and experience hospitality at its finest.</p>
                         <a href="#restaurant" class="hero-btn">View Restaurant</a>
                     </div>
@@ -183,7 +183,7 @@
                 style="background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url('images/IMG_85461.png');">
                 <div class="container">
                     <div class="hero-content">
-                        <h1>Summer Splendor at Royal Inn</h1>
+                        <h1>Rooms Near Ambaji Temple at Royal Inn Hotel</h1>
                         <p>Enjoy our rooftop pool, sunset cocktails, and special seasonal packages designed for your
                             perfect summer escape.</p>
                         <a href="#amenities" class="hero-btn">Our Amenities</a>
@@ -195,7 +195,7 @@
                 style="background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url('images/IMG-20250510-WA0020.jpg');">
                 <div class="container">
                     <div class="hero-content">
-                        <h1>Every Comfort Designed For You</h1>
+                        <h1>Royal Inn Hotel Near Ambaji Temple</h1>
                         <p>Create lasting memories with our exceptional services and amenities.</p>
                         <a href="#amenities" class="hero-btn">Our Amenities</a>
                     </div>
@@ -206,7 +206,7 @@
                 style="background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url('images/IMG-20250510-WA0018.jpg');">
                 <div class="container">
                     <div class="hero-content">
-                        <h1>Where Moments Become Memories</h1>
+                        <h1>Royal Inn is the best hotel near Ambaji temple</h1>
                         <p>Our elegant banquet halls, expert event planners. Capacity for 20-500 guests.</p>
                         <a href="#banquet" class="hero-btn">View Banquet</a>
                     </div>
