--- a/index.html
+++ b/index.html
@@ -148,7 +148,15 @@
     <div id="loadingIcon" class="spinner-overlay" style="display: none;">
         <div class="spinner">Loading....</div>
     </div>
-
+    <!-- Top-Center Floating Loader -->
+<div id="floatingLoader" style="display: none;">
+  <div class="top-loader-box">
+    <div class="top-loader-bar">
+      <div class="top-bar-progress"></div>
+    </div>
+    <p class="top-loader-text">Checking Discount...</p>
+  </div>
+</div>
     <!-- Hero Section -->
     <!-- Hero Section -->
     <section class="hero" id="home">
