--- a/index.html
+++ b/index.html
@@ -154,7 +154,9 @@
     <div class="top-loader-bar">
       <div class="top-bar-progress"></div>
     </div>
-    <p class="top-loader-text">Checking Discount...</p>
+    <p class="top-loader-text">Checking Discount...
+	     <span id="loaderCountdown" style="margin-left: 10px; font-weight: bold; color: #ffcc00;">30s</span>
+    </p>
   </div>
 </div>
     <!-- Hero Section -->
